2005-02-21  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (create_one_method_record): Correctly compute
	"index" field.
	* abi.cc (get_vtable_index): New method.
	* abi.hh (gcj_abi::get_vtable_index): New method.
	(cxx_abi::get_vtable_index): Declare.
	(bc_abi::get_vtable_index): New method.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_utf8const): Use 'type', not 'type_utf8const'.

	* abi.cc (build_class_reference): Wrote.

	* classobj.cc (create_class_instance): Use new get_vtable
	argument.
	* abi.cc (get_vtable): Updated.
	* abi.hh (gcj_abi::get_vtable): Added argument.
	(cxx_abi::get_vtable): Likewise.
	(bc_abi::get_vtable): Likewise.
	* builtins.cc (get_vtable_decl): Updated.
	* builtins.hh (tree_builtins::get_vtable): Added argument.

	* classobj.cc (handle_interfaces): Updated.
	(create_class_instance): Updated.
	* abi.cc (build_class_reference): Rewrote.
	* abi.hh (gcj_abi::build_class_ref): Changed argument type.
	(cxx_abi::build_class_ref): Likewise.
	(bc_abi::build_class_ref): Likewise.
	* tree.hh (tree_generator::build_class_ref): Updated.
	* tree.cc (build_class_ref): Rewrote.
	(build_class_ref): Likewise.  Changed argument type.
	(build_new_array): Updated.
	* builtins.hh (tree_builtins::find_abi): Updated.
	* builtins.cc (find_abi): Removed argument.
	(map_field_ref): Updated.
	(map_method_call): Likewise.
	(map_new): Likewise.

	* abi.cc (get_vtable): New method.
	* abi.hh (gcj_abi::get_vtable): New abstract method.
	(cxx_abi::get_vtable): Declare.
	(bc_abi::get_vtable): Likewise.
	* glue.hh: Include version.h.
	* decl.cc (initialize_version): Rewrote.
	(GCJ_BINARYCOMPAT_ADDITION): New define.
	(build_class_type): Changed name of field to "dtable".
	* classobj.hh (class_object_creator::create_constants): Declare.
	* classobj.cc (create_constants): New method.
	(make_decl): Don't set DECL_ASSEMBLER_NAME.
	(create_method_throws): Use make_decl.
	(create_index_table): Likewise.  Handle case where table is
	empty.